[gd_scene load_steps=42 format=2]

[ext_resource path="res://tutoriel.gd" type="Script" id=1]
[ext_resource path="res://texture/knight quest/mur.png" type="Texture" id=2]
[ext_resource path="res://base.tscn" type="PackedScene" id=3]
[ext_resource path="res://texture/knight quest/murback.png" type="Texture" id=4]
[ext_resource path="res://enemistu.gd" type="Script" id=5]
[ext_resource path="res://playernodetu.gd" type="Script" id=6]
[ext_resource path="res://player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scorenode.gd" type="Script" id=8]
[ext_resource path="res://texture/static/Pixeled.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://texture/knight quest/tutoriel music.wav" type="AudioStream" id=10]
[ext_resource path="res://texture/static/hit!.wav" type="AudioStream" id=11]
[ext_resource path="res://texture/static/enemykill.wav" type="AudioStream" id=12]
[ext_resource path="res://texture/static/gameover.wav" type="AudioStream" id=13]
[ext_resource path="res://texture/knight quest/tueaster.wav" type="AudioStream" id=14]
[ext_resource path="res://texture/knight quest/fireballassimilation.wav" type="AudioStream" id=15]
[ext_resource path="res://firerecharge.tscn" type="PackedScene" id=16]
[ext_resource path="res://restartmenu.gd" type="Script" id=17]
[ext_resource path="res://texture/knight quest/replay1.png" type="Texture" id=18]
[ext_resource path="res://Button.gd" type="Script" id=19]
[ext_resource path="res://texture/static/quit.png" type="Texture" id=20]
[ext_resource path="res://texture/static/home.png" type="Texture" id=21]
[ext_resource path="res://texture/static/unpause.png" type="Texture" id=22]
[ext_resource path="res://texture/static/blackback.png" type="Texture" id=23]
[ext_resource path="res://text+back.tres" type="DynamicFont" id=24]
[ext_resource path="res://texture/knight quest/salle trone.png" type="Texture" id=25]
[ext_resource path="res://texture/knight quest/kingidle.png" type="Texture" id=26]
[ext_resource path="res://roi.gd" type="Script" id=27]
[ext_resource path="res://texture/knight quest/tutoeasteregg.png" type="Texture" id=28]
[ext_resource path="res://texture/knight quest/amedefeucin√©ma.png" type="Texture" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 537.666, 31.8961 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.2174, 329.782 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "easter"
length = 4.0
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3, 3.02, 3.04, 3.06, 3.08, 3.1, 3.12, 3.14, 3.16, 3.18, 3.2, 3.22, 3.24, 3.26, 3.28, 3.3, 3.32, 3.34, 3.36, 3.38, 3.4, 3.42, 3.44, 3.46, 3.48, 3.5, 3.52, 3.54, 3.56, 3.58, 3.6, 3.62, 3.64, 3.66, 3.68, 3.7, 3.72, 3.74, 3.76, 3.78, 3.8, 3.82, 3.84, 3.86, 3.88, 3.9, 3.92, 3.94, 3.96, 3.98, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 5, 6, 7, 8, 9, 11, 13, 14, 15, 5, 6, 7, 8, 9, 11, 12, 12, 12, 13, 14, 15, 9, 10, 11, 12, 13, 14, 15, 16, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 9 ]
}

[sub_resource type="Animation" id=12]
resource_name = "accaparement"
length = 7.8
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 7.52, 7.54, 7.56, 7.58, 7.6, 7.62, 7.64, 7.66, 7.68, 7.7, 7.72, 7.74, 7.76, 7.78 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="mur" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="mur"]

[node name="Sprite" type="Sprite" parent="mur/StaticBody2D"]
position = Vector2( 342.256, 115.649 )
rotation = 1.5708
scale = Vector2( 0.363206, 1.93856 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D"]
position = Vector2( 512.186, -2.39899 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="mur"]
position = Vector2( 1027.89, 183.391 )

[node name="Sprite" type="Sprite" parent="mur/StaticBody2D4"]
position = Vector2( 91.2249, 206.112 )
scale = Vector2( 0.302264, 1.17134 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D4"]
position = Vector2( -4.23779, 116.969 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="mur"]
position = Vector2( 13.6361, 600.849 )

[node name="Sprite" type="Sprite" parent="mur/StaticBody2D2"]
position = Vector2( 341.547, 94.1374 )
rotation = 1.5708
scale = Vector2( 0.294716, 1.97127 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D2"]
position = Vector2( 502.1, -4.91095 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="mur"]
position = Vector2( -1.43201, 183.391 )

[node name="Sprite" type="Sprite" parent="mur/StaticBody2D3"]
position = Vector2( 92.3826, 211.557 )
scale = Vector2( 0.289741, 1.19594 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D3"]
position = Vector2( -3.51129, 116.048 )
shape = SubResource( 2 )

[node name="base" parent="mur" instance=ExtResource( 3 )]
position = Vector2( 508.191, 499.998 )
z_index = -2

[node name="background" type="Sprite" parent="mur"]
position = Vector2( 496.637, 393.236 )
scale = Vector2( 1.26142, 1.22491 )
z_index = -3
texture = ExtResource( 4 )

[node name="enemis" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="enemis"]
autostart = true

[node name="playernode" type="Node" parent="."]
script = ExtResource( 6 )

[node name="player" parent="playernode" instance=ExtResource( 7 )]
position = Vector2( 517.205, 521.11 )
z_index = 1
collision/safe_margin = 0.001

[node name="scorenode" type="Node" parent="."]
script = ExtResource( 8 )

[node name="score" type="Label" parent="scorenode"]
margin_left = 37.7296
margin_top = 434.434
margin_right = 212.73
margin_bottom = 532.434
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0.0941176, 0.647059, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "score"

[node name="combo" type="Label" parent="scorenode"]
margin_left = 774.948
margin_top = 307.52
margin_right = 956.948
margin_bottom = 405.52
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "combo"

[node name="sond" type="Node" parent="."]

[node name="musique" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 10 )

[node name="hit" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 11 )

[node name="enemykill" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 12 )
volume_db = -16.64

[node name="gameover" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 13 )

[node name="easteregg" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 14 )
pitch_scale = 2.43

[node name="ame de feu" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 15 )

[node name="firerecharge" parent="." instance=ExtResource( 16 )]
visible = false
position = Vector2( 904.648, 491.095 )

[node name="restartmenu" type="Node" parent="."]
script = ExtResource( 17 )

[node name="Button" type="Button" parent="restartmenu"]
visible = false
margin_left = 421.55
margin_top = 91.5364
margin_right = 881.55
margin_bottom = 513.536
rect_scale = Vector2( 0.35, 0.35 )
icon = ExtResource( 18 )
flat = true
script = ExtResource( 19 )

[node name="quit" type="Button" parent="restartmenu"]
visible = false
margin_left = 527.807
margin_top = 304.418
margin_right = 731.807
margin_bottom = 502.418
rect_scale = Vector2( 0.35, 0.35 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
icon = ExtResource( 20 )
flat = true

[node name="quitb" type="Button" parent="restartmenu"]
visible = false
margin_left = 461.185
margin_top = 302.567
margin_right = 665.185
margin_bottom = 500.567
rect_scale = Vector2( 0.35, 0.35 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
icon = ExtResource( 20 )
flat = true

[node name="recommencer" type="Label" parent="restartmenu"]
visible = false
margin_left = 358.0
margin_top = 220.0
margin_right = 643.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RECOMMENCER"

[node name="quit2" type="Label" parent="restartmenu"]
visible = false
margin_left = 477.775
margin_top = 361.176
margin_right = 652.775
margin_bottom = 431.176
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUITTER"

[node name="quitb2" type="Label" parent="restartmenu"]
visible = false
margin_left = 418.555
margin_top = 357.475
margin_right = 593.555
margin_bottom = 427.475
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUITTER"

[node name="home2" type="Label" parent="restartmenu"]
visible = false
margin_left = 359.37
margin_top = 362.79
margin_right = 464.37
margin_bottom = 432.79
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU"

[node name="home" type="Button" parent="restartmenu"]
visible = false
margin_left = 365.612
margin_top = 285.032
margin_right = 601.612
margin_bottom = 547.032
rect_scale = Vector2( 0.35, 0.35 )
icon = ExtResource( 21 )
flat = true

[node name="unpause" type="Button" parent="restartmenu"]
visible = false
margin_left = 460.003
margin_top = 89.1905
margin_right = 632.003
margin_bottom = 319.191
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 22 )
flat = true

[node name="unpause2" type="Label" parent="restartmenu"]
visible = false
margin_left = 385.566
margin_top = 181.166
margin_right = 610.566
margin_bottom = 251.166
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REPRENDRE"

[node name="text" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="text"]

[node name="Label" type="Label" parent="text"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cin√©matiques" type="Node" parent="."]

[node name="textback" type="Sprite" parent="cin√©matiques"]
visible = false
position = Vector2( 510.724, 297.117 )
scale = Vector2( 33.2499, 19.6797 )
z_index = 2
texture = ExtResource( 23 )

[node name="text" type="Label" parent="cin√©matiques/textback"]
margin_left = -14.984
margin_top = -14.0287
margin_right = 58.0161
margin_bottom = 31.9713
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 24 )
text = "TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indication" type="Label" parent="cin√©matiques/textback"]
margin_left = -14.9474
margin_top = 12.1445
margin_right = 58.0526
margin_bottom = 58.1445
rect_scale = Vector2( 0.06, 0.06 )
custom_fonts/font = SubResource( 9 )
text = "TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="salletrone" type="Sprite" parent="cin√©matiques"]
position = Vector2( 517.181, 298.417 )
scale = Vector2( 0.406413, 0.403913 )
texture = ExtResource( 25 )

[node name="roi" type="Sprite" parent="cin√©matiques"]
position = Vector2( 517.264, 204.974 )
scale = Vector2( 0.126938, 0.126938 )
texture = ExtResource( 26 )
vframes = 2
hframes = 2
frame = 3
script = ExtResource( 27 )

[node name="AnimationTree" type="AnimationPlayer" parent="cin√©matiques/roi"]
anims/idle = SubResource( 10 )

[node name="tutoeaster" type="Sprite" parent="cin√©matiques"]
visible = false
position = Vector2( 516.926, 274.788 )
scale = Vector2( 0.312613, 0.312613 )
z_index = 5
texture = ExtResource( 28 )
vframes = 6
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="cin√©matiques/tutoeaster"]
anims/easter = SubResource( 11 )

[node name="amedefeu" type="Sprite" parent="cin√©matiques"]
visible = false
position = Vector2( 523.03, 266.35 )
scale = Vector2( 1.02575, 1.02575 )
z_index = 2
texture = ExtResource( 29 )
vframes = 6
hframes = 6
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="cin√©matiques/amedefeu"]
anims/accaparement = SubResource( 12 )
[connection signal="pause" from="." to="playernode/player" method="_on_main_pause"]
[connection signal="pause" from="." to="playernode" method="_on_main_pause"]
[connection signal="pause" from="." to="enemis" method="_on_main_pause"]
[connection signal="unpause" from="." to="playernode/player" method="_on_main_unpause"]
[connection signal="unpause" from="." to="playernode" method="_on_main_unpause"]
[connection signal="unpause" from="." to="enemis" method="_on_main_unpause"]
[connection signal="timeout" from="enemis/Timer" to="enemis" method="_on_Timer_timeout"]
[connection signal="finished" from="sond/musique" to="." method="_on_musique_finished"]
[connection signal="mouse_entered" from="restartmenu/Button" to="restartmenu" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/Button" to="restartmenu" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="restartmenu/Button" to="playernode/player" method="_on_Button_pressed"]
[connection signal="pressed" from="restartmenu/Button" to="playernode" method="_on_Button_pressed"]
[connection signal="pressed" from="restartmenu/Button" to="enemis" method="_on_Button_pressed"]
[connection signal="pressed" from="restartmenu/Button" to="scorenode" method="_on_Button_pressed"]
[connection signal="pressed" from="restartmenu/Button" to="mur/base" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="restartmenu/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="restartmenu/quit" to="restartmenu" method="_on_quit_pressed"]
[connection signal="mouse_entered" from="restartmenu/quitb" to="restartmenu" method="_on_quitb_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/quitb" to="restartmenu" method="_on_quitb_mouse_exited"]
[connection signal="pressed" from="restartmenu/quitb" to="." method="_on_quitb_pressed"]
[connection signal="mouse_entered" from="restartmenu/home" to="restartmenu" method="_on_home_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/home" to="restartmenu" method="_on_home_mouse_exited"]
[connection signal="pressed" from="restartmenu/home" to="restartmenu" method="_on_home_pressed"]
[connection signal="mouse_entered" from="restartmenu/unpause" to="restartmenu" method="_on_unpause_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/unpause" to="restartmenu" method="_on_unpause_mouse_exited"]
[connection signal="pressed" from="restartmenu/unpause" to="." method="_on_unpause_pressed"]
